WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60727
PluginView::invalidateRect doesn't work for transformed plug-ins
https://bugs.webkit.org/show_bug.cgi?id=60727
Summary
PluginView::invalidateRect doesn't work for transformed plug-ins
Anders Carlsson
Reported
2011-05-12 14:07:26 PDT
PluginView::invalidateRect doesn't work for transformed plug-ins
Attachments
Patch
(1.71 KB, patch)
2011-05-12 14:08 PDT
,
Anders Carlsson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-05-12 14:08:50 PDT
Created
attachment 93335
[details]
Patch
Simon Fraser (smfr)
Comment 2
2011-05-12 14:10:15 PDT
Comment on
attachment 93335
[details]
Patch Could this have a repaint test, via the test plugin?
Anders Carlsson
Comment 3
2011-05-12 14:13:26 PDT
Committed
r86379
: <
http://trac.webkit.org/changeset/86379
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug