2011-05-12  Anders Carlsson  <andersca@apple.com>

Reviewed by Simon Fraser.

        PluginView::invalidateRect doesn't work for transformed plug-ins
        https://bugs.webkit.org/show_bug.cgi?id=60727
        <rdar://problem/9331244>

        Ask the RenderObject to repaint the plug-in instead of using invalidateContentsAndWindow.
        This matches what we do in WebKit1.

        * WebProcess/Plugins/PluginView.cpp:
        (WebKit::PluginView::invalidateRect):


Canonical link: https://commits.webkit.org/76036@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86379 268f45cc-cd09-0410-ab3c-d52691b4dbfc